# RUNE

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLA.md  DEP5  LICENSE  LICENSE.md  Makefile  NOTICE.md  PATENTS.md  README.md  index.html  mkdocs.yml  mkdocs.yml.bak  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: deploy-docs.yml
Design_Principles/: index.html
RUNE_Complete_Refernce/: index.html
STYLE_GUIDE/: index.html
api_reference/: index.html
architecture/: index.html
bash_library_reference/: index.html
bpcs/: index.html
contrib/STYLE_GUIDE/: index.html
contrib/contributing/: index.html
contributing/: index.html
diagrams/: index.html
docs/: CLA.md  Design_Principles.md  PATENTS.md  RUNE_Complete_Refernce.md  STYLE_GUIDE.md  api_reference.md  architecture.md  bash_library_reference.md  bpcs.md  contributing.md  diagrams.md  eps.md  glossary.md  glossary_of_terms.md  index.md  install.md  json_appendix.md  lifecycle.md  mediation_model.md  mrs.md  plugin_dev_guide.md  plugin_development_guide.md  positioning.md  protocol_module.md  protocol_runtime.md  quick_start.md  rcs.md  roadmap.md  security_model.md  system_architecture.md  testing.md  testing_guide.md  why_rune.md
docs/assets/javascripts/: mermaid-init.js
docs/contrib/: architecture.md  contributing.md
docs/dev/: index.md
docs/dev/modules/: api_reference.md  security_model.md
docs/dev/plugins/: advanced_json.md  beginner_plugin.md  plugin_guide.md  rune_bpcs_api.md
docs/imp/: install.md  quick_start.md  rune_implementation_guide.md
docs/legal/: PATENTS.md
docs/protocols/: index.md  protocol_bash.md  protocol_error.md  protocol_module.md
eps/: index.html
glossary/: index.html
glossary_of_terms/: index.html
install/: index.html
json_appendix/: index.html
legal/CLA/: index.html
legal/LICENSE/: index.html
legal/NOTICE/: index.html
legal/PATENTS/: index.html
lifecycle/: index.html
mediation_model/: index.html
mrs/: index.html
plugin_dev_guide/: index.html
plugin_development_guide/: index.html
plugins/: gather-logs.sh  noop.sh  restart-docker.sh  restart-nomad.sh
plugins/lib/: rune_bpcs.sh
plugins/tests/: noop_input_advanced_fail.json  noop_input_advanced_success.json  noop_input_easy_fail.json  noop_input_easy_success.json
positioning/: index.html
protocol_error/: index.html
protocol_module/: index.html
protocol_runtime/: index.html
quick_start/: index.html
rcs/: index.html
roadmap/: index.html
scripts/: release.sh
search/: search_index.json
security_model/: index.html
src/rune/: __init__.py  mediator.py  models.py  orchestrator.py  rune_cli.py  transport_ssh.py  transport_ssm.py
stylesheets/: extra.css
system_architecture/: index.html
testing/: index.html
testing_guide/: index.html
tests/: test_cli_orchestrator.py  test_mediator_transports.py  test_models.py  test_plugins.py  test_transports.py
why_rune/: index.html
