[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rune"
version = "0.1.0"
description = "rune (Lightweight Unified Command Interface) - a modular Linux orchestration framework"
readme = "README.md"
license = { text = "MPL-2.0" }
authors = [
  { name = "Richard Majewski", email = "uglyegg@users.noreply.github.com" },
]
maintainers = [
  { name = "Richard Majewski", email = "uglyegg@users.noreply.github.com" },
]
keywords = [
  "orchestration",
  "automation",
  "linux",
  "cli",
  "ssm",
  "ssh",
  "infrastructure",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "ruff>=0.5.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pre-commit>=4.3.0",
  "hatch>=1.9.0",
  "build>=0.10.0",
  "twine>=4.0.0",
  "spdx-headers>=1.5.1",
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.7.0",
]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-mock>=3.10.0"]

[project.urls]
Homepage = "https://github.com/UglyEgg/rune"
Repository = "https://github.com/UglyEgg/rune"
Issues = "https://github.com/UglyEgg/rune/issues"
Documentation = "https://uglyegg.github.io/RUNE/"
Changelog = "https://github.com/UglyEgg/rune/blob/main/CHANGELOG.md"

[project.scripts]
rune = "rune.rune_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rune"]

[tool.black]
line-length = 99
target-version = ['py312']
include = '\\.pyi?'
extend-exclude = '''
/(
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
  | _version.py
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 99
known_first_party = ["rune"]
skip_glob = ["*/_version.py"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["tomli", "tomllib"]
ignore_missing_imports = true

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E203"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = "src"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.spdx-headers]
exclude = ["_version.py"]
